--- a/spring-boot-hibernate5/src/main/resources/application.properties
+++ b/spring-boot-hibernate5/src/main/resources/application.properties
@@ -15,10 +15,11 @@ spring.mvc.view.prefix=/WEB-INF/views/
 #LOG
 logging.config=classpath:log4j2.xml
 
-spring.datasource.url=jdbc:mysql://localhost/demo-schema
+spring.datasource.url=jdbc:mysql://localhost:3306/demoschema
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.data.jpa.repositories.enabled=true
@@ -26,3 +27,5 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
