--- a/spring-boot-email/src/main/resources/application.properties
+++ b/spring-boot-email/src/main/resources/application.properties
@@ -11,14 +11,53 @@ server.error.whitelabel.enabled=true
 logging.config=classpath:log4j2.xml
 
 # Email (MailProperties)
-spring.mail.default-encoding=UTF-8
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=smtp.qq.com
+#spring.mail.password=123456
+#spring.mail.port=25
+#spring.mail.protocol=smtp
+#spring.mail.test-connection=false
+#spring.mail.username=server1@qq.com
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.transport.protocol=smtps
+#spring.mail.properties.mail.smtps.quitwait=false 
+#email.defaultSendFormAddress=server1@qq.com
+
+# Email (MailProperties)
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=mail.onstar.com.cn
+#spring.mail.username=WebMaster@onstar.com.cn
+#spring.mail.password=WebMaster
+#spring.mail.port=25
+#spring.mail.properties.mail.smtp.auth=false
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.protocol=smtp
+#spring.mail.test-connection=false
+#spring.mail.properties.mail.transport.protocol=smtps
+#spring.mail.properties.mail.smtps.quitwait=false
+#email.defaultSendFormAddress=WebMaster@onstar.com.cn
+
+# JavaMailSender 163
+#spring.mail.host=smtp.163.com
+#spring.mail.username=arenzhj@163.com
+#spring.mail.password=ren890327*
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#email.defaultSendFormAddress=arenzhj@163.com
+
+
+
+
+# JavaMailSender qq
 spring.mail.host=smtp.qq.com
-spring.mail.password=123456
-spring.mail.port=25
-spring.mail.protocol=smtp
-spring.mail.test-connection=false
-spring.mail.username=server1@qq.com
+spring.mail.username=910929984@qq.com
+spring.mail.password=xalujysmmynobaje
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.transport.protocol=smtps
-spring.mail.properties.mail.smtps.quitwait=false
+spring.mail.properties.mail.smtp.starttls.required=true
+email.defaultSendFormAddress=910929984@qq.com
+
+
