--- a/spring-boot-easyui-kindeditor/src/main/resources/application.properties
+++ b/spring-boot-easyui-kindeditor/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.index=EasyUI-KindEditor-Dialog.v1.1
 spring.application.name=EasyUI-KindEditor-Dialog
 
 #Server
-server.port=80
+server.port=8080
 server.jsp-servlet.class-name=org.apache.jasper.servlet.JspServlet
 
 security.basic.enabled=false
@@ -13,8 +13,5 @@ management.security.enabled=false
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.resources.static-locations=classpath:/static/
 
-security.basic.enabled=false
-management.security.enabled=false
-
 #LOG
-logging.config=classpath:log4j2.xml
+logging.config=classpath\:log4j2.xml
