--- a/spring-boot-email/pom.xml
+++ b/spring-boot-email/pom.xml
@@ -14,6 +14,11 @@
 	<packaging>war</packaging>
 	<name>spring-boot-email</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+		<poi.version>3.13</poi.version>
+	</properties>
+
 
 	<dependencies>
 		<dependency>
@@ -36,6 +41,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
