--- a/spring-boot-jpa/src/main/resources/application.properties
+++ b/spring-boot-jpa/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.index=Spring-boot-Jpa.v1.1
 spring.application.name=Spring-boot-JPA
 
 #Server
-server.port=80
+server.port=8080
 server.jsp-servlet.class-name=org.apache.jasper.servlet.JspServlet
 
 security.basic.enabled=false
@@ -17,7 +17,7 @@ logging.config=classpath:log4j2.xml
 
 spring.datasource.url=jdbc:mysql://localhost/demo-schema
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
