--- a/spring-boot-quartz/src/main/resources/application.properties
+++ b/spring-boot-quartz/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # IDENTITY (ContextIdApplicationContextInitializer)
 spring.application.index=WebSystem.v1.1
-spring.application.name=WebSystem
+spring.application.name=quartz
 
 #Server
-server.port=80
+server.port=8081
 server.jsp-servlet.class-name=org.apache.jasper.servlet.JspServlet
 
 security.basic.enabled=false
@@ -13,8 +13,5 @@ management.security.enabled=false
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.resources.static-locations=classpath:/static/
 
-security.basic.enabled=false
-management.security.enabled=false
-
 #LOG
-logging.config=classpath:log4j2.xml
+logging.config=classpath\:log4j2.xml
